variables.RunFour.scala.error
Erreur de compilation :
RunFour:4: error: not found: value nbBiscuits
while (nbBiscuits != 4)
       ^RunFour:9: error: not found: value nbBiscuits
    nbBiscuits = nbBiscuits + 1
    ^