variables.RunFour.scala.code
var nbBiscruits:Int = 0;


while (nbBiscuits != 4)
{
  avance()
	if (estSurBiscuit())
  {
  	nbBiscuits = nbBiscuits + 1
  }
  
}